cmake_minimum_required(VERSION 4.0)
project(homework)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(01_basic_data_structure)
add_subdirectory(02_divide_and_conquer)
add_subdirectory(03_select_and_tree)
add_subdirectory(04_sort)
add_subdirectory(05_greedy)
add_subdirectory(06_dynamic_programming)
add_subdirectory(07_heap)
add_subdirectory(08_SearchTree_HashTable_DisjointSet)
add_subdirectory(09_graph)
add_subdirectory(10_spanning_tree)
add_subdirectory(11_shortest_path)